--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
             <label for="email">Email: </label>
             <input type="email" id="email" name="email">
         </form>
+        <article>
+            <img scr="images/dog.jpg">
+        </article>
     </main>
+    
 </body>
 </html>
